fix: Fix CSS text align justify big spaces

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ ul {
 li,
 p {
   text-align: justify;
+  word-break: break-all;
 }
 
 footer p {
